--- a/style/style.css
+++ b/style/style.css
@@ -9,13 +9,24 @@
     font-optical-sizing: auto;
 }
 
-:root {}
+/* :root {} */
 
 body {
     width: 100%;
 }
 
-main {
+.about,
+.featured-host{
+    
+    background-color: #1A0B2E;
+}
+.choose{
+    background-color: #230E3D;
+}
+
+.about-us, 
+.why-choose, 
+.episodes{
     width: 80%;
     margin: 0px auto;
 }
@@ -93,10 +104,14 @@ li {
 }
 
 /* Hero Section */
+
 .hero {
     background-image: url(../assets/hero-bg.png);
     width: 100%;
     height: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .hero1 {
@@ -105,23 +120,39 @@ li {
     align-items: center;
     justify-content: center;
     gap: 2.5rem;
-padding: 6.2rem;
-margin: 0px auto;
+    padding: 6.2rem;
+    margin: 0px auto;
 }
 
 .hero-img {
     width: 350px;
     height: 350px;
-    border: red 1px solid;
+    position: relative;
 }
-.hero-img p{
-    color: #FFFFFF;
+
+.hero-img p {
+    font-size: 18px;
+    font-weight: 600;
+    color: #1A0B2E;
+    background-color: #00FF88;
+    padding: 8px 16px;
+    border-radius: 1000px;
+    position: absolute;
+    left: 270px;
+    top: 20px;
 }
+
 .hero-img .circle {
     width: 100%;
     height: 100%;
 }
+.micro{
+    position: absolute;
+    left: 115px;
+    top: 90px;
 
+
+}
 .hero-txt {
     display: flex;
     flex-direction: column;
@@ -160,11 +191,46 @@ margin: 0px auto;
     background-color: transparent;
     cursor: pointer;
 }
-.hero-btn button img{
+
+.hero-btn button img {
     width: 20px;
     height: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* About Section */
+
+.about-txt{
+    padding: 50px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.about-txt h2{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.cards{
+    display: flex;
+    gap: 5.3rem;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-top: 2rem;
+    padding-bottom: 6.5rem;
+}
+.cards span{
+    font-size: 2.5rem;
+    /* padding-left: 5px; */
+}
+.card h2{
+    font-size: 3rem;
+    color: #00FF88;
+    margin-bottom: 1rem;
+}
+.card p{
+    color: #FFFFFF;
+    line-height: 20px;
 }
