--- a/style/style.css
+++ b/style/style.css
@@ -16,17 +16,18 @@ body {
 }
 
 .about,
-.featured-host{
-    
+.featured-host {
+
     background-color: #1A0B2E;
 }
-.choose{
+
+.choose {
     background-color: #230E3D;
 }
 
-.about-us, 
-.why-choose, 
-.episodes{
+.about-us,
+.why-choose,
+.episodes {
     width: 80%;
     margin: 0px auto;
 }
@@ -146,13 +147,15 @@ li {
     width: 100%;
     height: 100%;
 }
-.micro{
+
+.micro {
     position: absolute;
     left: 115px;
     top: 90px;
 
 
 }
+
 .hero-txt {
     display: flex;
     flex-direction: column;
@@ -203,16 +206,18 @@ li {
 
 /* About Section */
 
-.about-txt{
+.about-txt {
     padding: 50px;
     text-align: center;
     color: #FFFFFF;
 }
-.about-txt h2{
+
+.about-txt h2 {
     font-size: 3rem;
     margin-bottom: 1rem;
 }
-.cards{
+
+.cards {
     display: flex;
     gap: 5.3rem;
     align-items: center;
@@ -221,16 +226,240 @@ li {
     margin-top: 2rem;
     padding-bottom: 6.5rem;
 }
-.cards span{
+
+.cards span {
     font-size: 2.5rem;
     /* padding-left: 5px; */
 }
-.card h2{
+
+.card h2 {
     font-size: 3rem;
     color: #00FF88;
     margin-bottom: 1rem;
 }
-.card p{
+
+.card p {
     color: #FFFFFF;
     line-height: 20px;
+}
+
+/* Why Choose TechWave section */
+.why-choose {
+    padding-top: 6rem;
+}
+
+.why-choose h2 {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.one {
+    grid-area: one;
+}
+
+.two {
+    grid-area: two;
+}
+
+.three {
+    grid-area: three;
+}
+
+.four {
+    grid-area: four;
+}
+
+.five {
+    grid-area: five;
+}
+
+.choose-cards {
+    padding: 2.5rem;
+    display: grid;
+    gap: 1.8rem;
+    grid-template-areas:
+        "one  two   two"
+        "one  three three"
+        "four four  five"
+    ;
+
+}
+
+.choose-card {
+    box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 2.8rem;
+    padding: 2.8rem;
+}
+
+.choose-card img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 1rem;
+}
+
+.choose-card h3 {
+    font-size: 1.5rem;
+    color: #FFFFFF;
+    font-weight: bold;
+    margin-bottom: 1rem;
+
+}
+
+.choose-card p {
+    color: #FFFFFF;
+    line-height: 1.5rem;
+}
+
+/* Featured Episodes section */
+.featured{
+    padding-top: 6rem;
+}
+.featured h2{
+    font-size: 3rem;
+    font-weight: bold;
+color: #FFFFFF;
+text-align: center;
+margin-bottom: 2.8rem;
+}
+.episodes-card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.8rem;
+    margin-bottom: 7rem;
+}
+.epi-card{
+    
+}
+.epi-card iframe{
+    width: 100%;
+    height: 50%;
+    border-top-right-radius: 1.5rem;
+    border-top-left-radius: 1.5rem;
+}
+.crd-txt{
+    padding: 1.5rem;
+    background-color: #250D44;
+    border-bottom-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
+.crd-txt h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #FFFFFF;
+    margin-bottom: .75rem;
+}
+.crd-txt p{
+    color: #FFFFFF;
+    line-height: 1.5rem;
+}
+.time{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-top: .75rem;
+}
+.time img{
+    width: 1.25rem;
+    height: 1.25rem;
+}
+.time p{
+    color: #00FF88;
+    line-height: 1.5rem;
+    font-weight: 600;
+
+}
+
+/* Meet the Host section */
+.host{
+    padding-bottom: 6rem;
+}
+.host h2{
+    color: #FFFFFF;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 2.8rem;
+}
+.host-details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+    padding: 2.8rem;
+    background-color: #351165;
+    border-radius: 2.8rem;
+
+}
+.alex h3{
+    color: #FFFFFF;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+.alex p{
+    color: rgba(255, 255, 255, 1);
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+
+}
+.social{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 1rem;
+}
+.social img{
+    width: 2.8rem;
+    height: 2.8rem;
+    padding: .50rem;
+    border: 1px #533C72 solid;
+    border-radius: 20%;
+    background-color: transparent;
+
+}
+
+/* Footer Section */
+footer{
+    background-image: url(../assets/footer-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.footer{
+    width: 95%;
+    margin: 0px auto;
+    text-align: center;
+
+}
+.footer h2{
+    padding-top: 6rem;
+    margin-bottom: 2rem;
+}
+.footer-icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    gap: 2.8rem;
+}
+.footer-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+}
+.footer-icon img{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+.footer-icon p{
+    font-weight: 500;
+    color: #FFFFFF;
+}
+.footer-pera{
+    color: #FAFAFA;
+    padding-bottom: 6rem;
 }
